-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u202, jfx11
-
Component/s: javafx
-
x86_64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8232820 | jfx11.0.5 | Thiago Sayao | P2 | Closed | Fixed | |
| JDK-8225311 | 8u231 | Pankaj Bansal | P2 | Closed | Fixed | b01 |
Linux Mint 19
A DESCRIPTION OF THE PROBLEM :
The startDragAndDrop method no longer works with GTK3
REGRESSION : Last worked in version 10.0.2
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
Run the source code and try to drag from the test button. Nothing is happening...
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
The possibility of dragging
ACTUAL -
Nothing is happening.
---------- BEGIN SOURCE ----------
import javafx.application.Application;
import javafx.scene.Scene;
import javafx.scene.control.Button;
import javafx.scene.input.ClipboardContent;
import javafx.scene.input.TransferMode;
import javafx.stage.Stage;
//Workaround: -Djdk.gtk.version=2
public class Fx11draggError extends Application{
@Override
public void start(Stage stage) throws Exception {
Button button = new Button("test");
button.setOnDragDetected(e -> {
ClipboardContent content = new ClipboardContent();
content.putString("It works");
button.startDragAndDrop(TransferMode.MOVE).setContent(content);
e.consume();
});
stage.setScene(new Scene(button, 200, 200));
stage.show();
}
public static void main(String[] args) {
launch();
}
}
---------- END SOURCE ----------
CUSTOMER SUBMITTED WORKAROUND :
use -Djdk.gtk.version=2
FREQUENCY : always
- backported by
-
JDK-8225311 DragAndDrop no longer works with GTK3
-
- Closed
-
-
JDK-8232820 DragAndDrop no longer works with GTK3
-
- Closed
-
- blocks
-
JDK-8222497 [8u] Switch on GTK3 as a default GTK L&F in javafx
-
- Resolved
-
- duplicates
-
JDK-8214083 Linux Debian Drag Drop is not working properly
-
- Closed
-
-
JDK-8216201 Clarification for: DragAndDrop no longer works with GTK3
-
- Closed
-
-
JDK-8222207 JavaFx Drag and Drop on Ubuntu not working
-
- Closed
-
-
JDK-8222219 DragOver event behave differently on Linux + issues changing the cursor image
-
- Closed
-
- relates to
-
JDK-8211248 Create manual drag and drop tests for FX / Swing interop
-
- Resolved
-
-
JDK-8225571 Port Linux glass drag source (DND) to use gtk instead of gdk
-
- Resolved
-
-
JDK-8280383 JavaFX Drag & Drop often hangs on Linux
-
- Open
-
- links to