8211302: DragAndDrop no longer works with GTK3

Reviewed-by: kcr, pbansal