tests/manual/dnd/DndTest.java
@@ -1,0 +1,131 @@
+/*
+ * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+ *
+ * This code is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU General Public License version 2 only, as
+ * published by the Free Software Foundation.  Oracle designates this
+ * particular file as subject to the "Classpath" exception as provided
+ * by Oracle in the LICENSE file that accompanied this code.
+ *
+ * This code is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+ * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+ * version 2 for more details (a copy is included in the LICENSE file that
+ * accompanied this code).
+ *
+ * You should have received a copy of the GNU General Public License version
+ * 2 along with this work; if not, write to the Free Software Foundation,
+ * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+ *
+ * Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
+ * or visit www.oracle.com if you need additional information or have any
+ * questions.
+ */
+
+
+import javafx.application.Application;
+import javafx.event.EventHandler;
+import javafx.scene.Group;
+import javafx.scene.Scene;
+import javafx.scene.control.Label;
+import javafx.scene.input.Dragboard;
+import javafx.scene.input.ClipboardContent;
+import javafx.scene.input.TransferMode;
+import javafx.scene.layout.HBox;
+import javafx.scene.layout.VBox;
+import javafx.scene.paint.Color;
+import javafx.scene.text.Text;
+import javafx.stage.Stage;
+
+public class DndTest extends Application {
+
+    @Override
+    public void start(Stage stage) {
+        stage.setTitle("Drag And Drop Test");
+
+        final Text source = new Text(50, 100, "DRAG ME");
+        source.setScaleX(2.0);
+        source.setScaleY(2.0);
+
+        final Text target = new Text(250, 100, "DROP HERE");
+        target.setScaleX(2.0);
+        target.setScaleY(2.0);
+
+        Group group = new Group();
+
+        VBox root = new VBox(5,
+                new Label("1. Click on \"DRAG ME\" and drop on \"DROP HERE\"."),
+                new Label("2. Click on \"DRAG ME\" and drop outside this program."),
+                new Label("3. Click on \"DRAG ME\" and drop on \"DROP HERE\"\n pressing SHIFT."),
+                new Label(""),
+                group);
+
+        Scene scene = new Scene(root, 400, 200);
+
+        source.setOnDragDetected(event -> {
+            Dragboard db = source.startDragAndDrop(TransferMode.ANY);
+            db.setDragView(source.snapshot(null, null), 0, -30);
+
+            ClipboardContent content = new ClipboardContent();
+            content.putString(source.getText());
+            db.setContent(content);
+
+            event.consume();
+        });
+
+        target.setOnDragOver(event -> {
+            if (event.getGestureSource() != target &&
+                    event.getDragboard().hasString()) {
+                event.acceptTransferModes(TransferMode.COPY_OR_MOVE);
+            }
+
+            event.consume();
+        });
+
+        target.setOnDragEntered(event -> {
+            if (event.getGestureSource() != target &&
+                    event.getDragboard().hasString()) {
+                target.setFill(Color.GREEN);
+            }
+
+            event.consume();
+        });
+
+        target.setOnDragExited(event -> {
+            target.setFill(Color.BLACK);
+
+            event.consume();
+        });
+
+        target.setOnDragDropped(event -> {
+            Dragboard db = event.getDragboard();
+            boolean success = false;
+            if (db.hasString()) {
+                target.setText(db.getString());
+                success = true;
+            }
+            event.setDropCompleted(success);
+
+            event.consume();
+        });
+
+        source.setOnDragDone(event -> {
+            if (event.getTransferMode() == TransferMode.MOVE) {
+                source.setText("");
+            }
+
+            event.consume();
+        });
+
+        group.getChildren().add(source);
+        group.getChildren().add(target);
+
+        stage.setScene(scene);
+        stage.show();
+    }
+
+    public static void main(String[] args) {
+        Application.launch(args);
+    }
+}
